--- a/Etiopie.mw
+++ b/Etiopie.mw
@@ -1,18 +1,18 @@
 {{Laandtabel-twd|
 naaminlaandssproak=የኢትዮጵያ ፌዴራላዊ ዴሞክራሲያዊ ሪፐብሊክ <br>yeʾĪtiyoṗṗya Fēdēralawī Dēmokirasīyawī Rīpebilīk ([[amhaarsk]])|
-naam-nds=Ethiopie|
+naam-nds=Etiopie|
 vlagge=Flag_of_Ethiopia.svg|
-naam=Ethiopie|
-woapn=Coat_of_arms_of_Ethiopia_(Official).svg|
+naam=Etiopie|
+woapn=Coat_of_arms_of_Ethiopia.svg|
 lokasie=LocationEthiopia.svg|
-sproaken=[[amhaarsk]] <small>(regeyringsspråke)</small>, [[oromo (språke)|Oromo]], [[Somalisk]], [[Tigrinyaansk]]|
+sproaken=[[amhaarsk]] <small>(regeringsspråke)</small>, [[oromo (språke)|oromo]], [[somalisk]], [[tigrinyaansk]]|
 heufdstad=[[Addis Abeba]]|
-regeringsvörm=Federale republik|
-religie=Ethiopisk ortodoks (43,5%), Islam (33%), protestantsk (18,6%) |
+regeringsvörm=federale republik|
+religie=etiopisk ortodoks (43,5%), islam (33%), protestantsk (18,6%) |
 pctwater=0,7|
 km2=1.104.300|
 dichtheid=92,7|
-inwonners=102.403.196|region=
+inwonners=102.403.196|region=AFR
 |breedtegroad=9/1//S|
 lengtegroad=38/45//E|
 munteenheid=Birr|
@@ -26,21 +26,24 @@ umskrieving2=
 }}
 
 
-'''Ethiopie''', in et [[amhaarsk]]: ኢትዮጵያ, (uutspreaken as ''ityopja''), [[Tigrinya (språke)|Tigrinya]]: ኢትዮጵያ, [[oromo (språke)|Oromo]]: Itoophiyaa, [[somali (språke)|Somali]]: Itoobiya), officiääl de '''Federale Democratiske Republik Ethiopie''', is een land in een deyl van noordoustafrika wat bekend steyt as [[de hoorn van Afrika]]. Et grenset an [[Eritrea]] in et noorden, [[Djibuti]] in et noordousten, et selvstürende gebeed [[Somaliland]] en [[Somalie]] in et ousten, [[Kenia]] in et süden, [[Süüd-Sudan]] in et westen en [[Sudan]] in et noordwesten. Med meyr as 102 miljoon inwoaners is Ethiopie et drukstbevolkte inslöäten land van de wearld en et tweyde dichtstbevolkte land van [[Afrika]], up ne uppervlakte van 1.100.000 km2.
+'''Etiopie''' (in et [[amhaarsk]]: ኢትዮጵያ, uutspreaken as: ''ityopja''; [[Tigrinya (språke)|tigrinya]]: ኢትዮጵያ; [[oromo (språke)|oromo]]: ''Itoophiyaa'', [[somali (språke)|somali]]: ''Itoobiya''), officieel de '''Federale Demokratiske Republik Etiopie''', is een land in een deyl van noordoustafrika wat bekend steyt as [[de hoorn van Afrika]]. Et grenst an [[Eritrea]] in et noorden, [[Djibuti]] in et noordousten, et selvstürende gebeed [[Somaliland]] en [[Somalie]] in et ousten, [[Kenia]] in et süden, [[Süüdsudan]] in et westen en [[Sudan]] in et noordwesten. Med meyr as 102 miljoon inwoaners is Etiopie et drükstbevolkede inslöäten land van de wearld en et tweyde dichtstbevolkede land van [[Afrika]], up ne uppervlakte van 1.100.000 km2.
 
-De höyvdstad en ouk gröätste stad is [[Addis Abeba]]. Dee stad ligt up een paar kilometer van den [[Oustafrikaansken klouv]] den as et land verdeylt in de nubiske en somaliske tektoniske plate.
+De höyvdstad en ouk gröytste stad is [[Addis Abeba]]. Dee stad ligt up een pår kilometer van den [[oustafrikaansken kloave]] den as et land verdeylt in de nubiske en somaliske tektoniske plate.
 
-[[File:Flag of Ethiopia (1975–1987).svg|thumb|The traditionele vlagge van Ethiopie]]
+[[File:Flag of Ethiopia (1975–1987).svg|thumb|De traditionele vlagge van Etiopie]]
 
-Bütte van de öldst bekende moderne [[menske]] sint vünden in Ethiopie.<ref>Nature. Hopkin, Michael. "Ethiopia is top choice for cradle of ''Homo sapiens''. 16 february 2005.</ref> Et wördt breyd beskowd as et land wår as de moderne menske vöär et eyrst up den trad güng når et [[Middenousten]] en vöärdan.<ref>Li, J.Z. Absher, D.M. Tang, H. Southwick, A.M. Casto, A.M.  Ramachandran, S. Cann, =H.M. Barsh, G.S. Feldman, M. Cavalli-Sforza, L.L. Myers, R.M. "Worldwide Human Relationships Inferred from Genome-Wide Patterns of Variation". Science, vol 319, is 5866. p 1100–1104 (2008). DOI 10.1126/science.1153717.</ref><ref>[https://web.archive.org/web/20110629125652/http://www.bloomberg.com/apps/news?pid=newsarchive&sid=awJVkvnk8KjM Bloomberg.com. (Archiveerd). "Humans Moved From Africa Across Globe, DNA Study Says". Skreaven up 21 february 2008.] Bekeaken up 16 maert 2009 </ref> Volgens språkenkündigen koloniseerden de eyrste lüde med ne afroasiatiske språke de Hoorn in de [[Neolitiske tyd]].<ref>Zarins, Juris (1990). "Early Pastoral Nomadism and the Settlement of Lower Mesopotamia". Bulletin of the American Schools of Oriental Research, vol 280, is 280. p 31–65. Jstor 1357309. DOI 10.2307/1357309.</ref> Med ne geskedenisse töt 2000 jår vöär [[Jezus Christus|Christus]] was Ethiopie de meyste tyd ne [[monarchy]]. Uut verhalen blikt dat de dynasty stichted wör döär de [[salomo]]niske geslachtslyne van de [[Köäniginne van Skeba]], under de eyrste köäning [[Menelik I]].<ref>[https://www.nationalgeographic.com/travel/destinations/africa/ethiopia/mysterious-queen-sheba-legend-church-archaeology/?cmpid=org=ngp::mc=social::src=twitter::cmp=editorial::add=tw20190213travel-resurfsheba::rid=&sf207660858=1 Nationalgeographic.com. "In search of the real Queen of Sheba".] Skreaven up 3 december 2018.</ref> Tydens de eyrste pår hunderd jår was et [[köäningryk Aksum]] ne eynheid binnen de streake<ref>''Ancient India, A History Textbook'' for Class XI, Ram Sharan Sharma, National Council of Educational Research and Training, India</ref><ref>Munro-Hay, p. 57</ref><ref>Henze, Paul B. (2005) ''Layers of Time: A History of Ethiopia'', ISBN 1-85065-522-7.</ref> en dårnå et ethiopiske keiserryk vanaf ungeveyr 1137. Tydens de tweyde hälvde van de 19. eywe en de [[wedloup üm Afrika]], bleyven [[Liberia]] en Ethiopie lange unafhanglik en vry van kolonisaty. Doo as nå de kolonisaty vöäle nye ståten unafhanglik wördden, nöämen se de klöären van de ethiopiske vlagge oaver. In [[1936]] wör et land besat döär [[Italie]] en ümmedöyped töt [[Italiaansk Ethiopie]], töt at et wör bevryded tydens den [[Tweyden Wearldoorlog]]. Ethiopie was den eyrsten afrikaansken lidståt van de [[Vereynigde Natys]]. In [[1974]] wör den ethiopisken keiser [[Haile Selassie]] afsat döär de [[Derg]], ne [[kommunisme|kommunistiske]] militäre regeyring med hülpe van de [[Sovjetuny]]. In [[1987]] richteden de Derg de [[Demokratiske Volksrepublik Ethiopie]] up, mär wör in [[1991]] afsat döär et [[Ethiopiske revolutionäär-demokratiske volksfront]], wat vandage noch an de macht is.
+Bütte van de öldst bekende moderne [[menske]] sint vünden in Etiopie.<ref>Nature. Hopkin, Michael. "Ethiopia is top choice for cradle of ''Homo sapiens''. 16 february 2005.</ref> Et wördt breyd beskouwd as et land wår as de moderne menske vöär et eyrst up den trad güng når et [[Middenousten]] en vöärdan.<ref>Li, J.Z. Absher, D.M. Tang, H. Southwick, A.M. Casto, A.M.  Ramachandran, S. Cann, =H.M. Barsh, G.S. Feldman, M. Cavalli-Sforza, L.L. Myers, R.M. "Worldwide Human Relationships Inferred from Genome-Wide Patterns of Variation". Science, vol 319, is 5866. p 1100–1104 (2008). DOI 10.1126/science.1153717.</ref><ref>[https://web.archive.org/web/20110629125652/http://www.bloomberg.com/apps/news?pid=newsarchive&sid=awJVkvnk8KjM Bloomberg.com. (Archiveerd). "Humans Moved From Africa Across Globe, DNA Study Says". Skreaven up 21 february 2008.] Bekeaken up 16 määrt 2009 </ref> Volgens språkenkündigen koloniseerden de eyrste lüde med ne afro-asiatiske språke de Hoorn in de [[neolitiske tyd]].<ref>Zarins, Juris (1990). "Early Pastoral Nomadism and the Settlement of Lower Mesopotamia". Bulletin of the American Schools of Oriental Research, vol 280, is 280. p 31–65. Jstor 1357309. DOI 10.2307/1357309.</ref> Med ne geskedenisse töt 2000 jår vöär [[Jezus Christus|Christus]] was Etiopie de meyste tyd ne [[monarchy]]. Uut verhalen blikt dat de dynasty stichted wör döär de [[salomo]]niske geslachtslyne van de [[Köäniginne van Skeba]], under de eyrste köäning [[Menelik I]].<ref>[https://www.nationalgeographic.com/travel/destinations/africa/ethiopia/mysterious-queen-sheba-legend-church-archaeology/?cmpid=org=ngp::mc=social::src=twitter::cmp=editorial::add=tw20190213travel-resurfsheba::rid=&sf207660858=1 Nationalgeographic.com. "In search of the real Queen of Sheba".] Skreaven up 3 december 2018.</ref> Tydens de eyrste pår hunderd jår was et [[köäningryk Aksum]] ne eynheid binnen de streake<ref>''Ancient India, A History Textbook'' for Class XI, Ram Sharan Sharma, National Council of Educational Research and Training, India</ref><ref>Munro-Hay, p. 57</ref><ref>Henze, Paul B. (2005) ''Layers of Time: A History of Ethiopia'', ISBN 1-85065-522-7.</ref> en dårnå et etiopiske keiserryk vanaf ungevear 1137. Tydens de tweyde hälvde van de 19. eywe en de [[wedloup üm Afrika]], bleyven [[Liberia]] en Etiopie lange unafhangelik en vry van kolonisaty. Do as nå de kolonisaty vöäle nye ståten unafhangelik wördden, nöämen se de klören van de etiopiske vlagge oaver. In [[1936]] wör et land besatted döär [[Italie]] en ümmedöyped töt [[Italiaansk Etiopie]], töt at et wör bevryded tydens den [[Tweyden Wearldoorlog]]. Etiopie was den eyrsten afrikaansken lidståt van de [[Vereynigde Natys]]. In [[1974]] wör den etiopisken keiser [[Haile Selassie]] afsatted döär de [[Derg]], ne [[kommunisme|kommunistiske]] militäre regering med hülpe van de [[Sovjetuny]]. In [[1987]] richteden de Derg de [[Demokratiske Volksrepublik Etiopie]] up, mär wör in [[1991]] afsatted döär et [[Etiopiske revolutionäär-demokratiske volksfront]], wat vandage noch an de macht is.
 
-Ethiopie en [[Eritrea]] gebruket beide et olde [[Ge'ez (skrivt)|Ge'ez-skrivt]] wat eyne van de öldste skryvsystemen in de wearld is.<ref>[https://books.google.com/books?id=gK1aAAAAYAAJ Page, Willie F. "Encyclopedia of African history and culture: African kingdoms (500 to 1500)". Facts on File, Vol 2 (2001).] p 230. ISBN 978-0-8160-4472-6.</ref> Den [[ethiopisken kalender]] löpt ungeveyr söäven jår en drey månd achter up den [[gregoriaansken kalender]]. Et wördt tegelyke bruked med de [[boranakalender]]. Ne meyrderheid van de ethiopiers is [[christendom|kristelik]] (höyvdsakelik [[Ethiopiske orthodokse tewahedokarke|ethiopisk orthodoks]] en [[P'ent'ay]]). Et historiske Köäningryk Aksum was eyne van de eyrste ståten dee et as ståtsgelöyv instelden. Eendarde van de inwoaners volget de [[Islam]] en dan höyvdsakelik de sunniströyming. Et land hevt de öldste moslimgemeynskap in Afrika. Een grout deyl ethiopiske [[jeudendom|jöäden]] woaneden töt de tachtiger jåren van de 20. eywe in et land.<ref>Weil, Shalva (2008) "Jews in Ethiopia", pp. 467–75 in ''Encyclopaedia of the Jewish Diaspora'', Vol. 2. M.A. Erlich (ed.). Santa Barbara, USA: ABC CLIO.</ref>
+Etiopie en [[Eritrea]] gebruket beide et olde [[Ge'ez (skrivt)|Ge'ez-skrivt]] wat eyne van de öldste skryvsystemen in de wearld is.<ref>[https://books.google.com/books?id=gK1aAAAAYAAJ Page, Willie F. "Encyclopedia of African history and culture: African kingdoms (500 to 1500)". Facts on File, Vol 2 (2001).] p 230. ISBN 978-0-8160-4472-6.</ref> Den [[etiopisken kalender]] löpt ungevear söäven jår en drey månd achter up den [[gregoriaansken kalender]]. Et wördt tegelyke bruked med de [[boranakalender]]. Ne meyrderheid van de etiopiers is [[christendom|christelik]] (höyvdsakelik [[Etiopiske ortodokse tewahedokarke|etiopisk ortodoks]] en [[P'ent'ay]]). Et historiske köäningryk Aksum was eyne van de eyrste ståten dee et as ståtsgelöyv instelden. Eyndarde van de inwoaners volget de [[islam]] en dan höyvdsakelik de sunniströyming. Et land hevt de öldste muslimgemeynskap in Afrika. Een grout deyl etiopiske [[jeudendom|jöäden]] woanden töt de tachttiger jåren van de 20. eywe in et land.<ref>Weil, Shalva (2008) "Jews in Ethiopia", pp. 467–75 in ''Encyclopaedia of the Jewish Diaspora'', Vol. 2. M.A. Erlich (ed.). Santa Barbara, USA: ABC CLIO.</ref>
 
-In ethiopie wordet ungeveyr 80 språken eküred. De veer gröätste sint et [[Oromo (språke)|oromo]], [[Amhaarsk (språke)|amhaarsk]], [[Somalisk (språke)|somalisk]] en [[Tigrayaansk]]. De meyste språken sint afroasiatisk en dan vöärnamelik [[kusjitiske språken|kusjitisk]] of [[semitiske språken|semitisk]]. Wydters küret se vöäral in südeliker streaken [[omotiske språken]]. Oromo hevt de meyste moderspreakers, mär amhaarsk hevt de meyste spreakers in totaal ümdat et de warkspråke is van de federale regeyring. Et ge'ezskrivt blivt belangryk as karkenskrivt vöär de ethiopiske en eritreiske orthodokse karke en de [[Beta Israel]] (de ethiopiske jöäden).
+In Etiopie wordet ungevear 80 språken eküürd. De veer gröytste sint et [[Oromo (språke)|oromo]], [[Amhaarsk (språke)|amhaarsk]], [[Somalisk (språke)|somalisk]] en [[tigrayaansk]]. De meyste språken sint afro-asiatisk en dan vöärnamelik [[kusjitiske språken|kusjitisk]] of [[semitiske språken|semitisk]]. Wyders küret se vöäral in südeliker streaken [[omotiske språken]]. Oromo hevt de meyste moderspreakers, mär amhaarsk hevt de meyste spreakers in totaal ümdat et de warkspråke is van de federale regering. Et ge'ezskrivt blivt belangryk as karkenskrivt vöär de etiopiske en eritreeske ortodokse karke en de [[Beta Israel]] (de etiopiske jöäden).
 
-De ethiopiske natuur büdt starke natuurlike teagenstellingen. Et westen is vrüchtbår med wolden en verskeidene rivyren en de heytste neadersetting van de wearld, [[Dallol (Ethiopie)|Dallol]] in et noorden. De [[Ethiopiske Houglanden]] sint de gröätste bargkeaten van Afrika]]. De [[Sof Omargrotten]] sint et gröätste van et wearlddeyl. Ouk hevt ethiopie van Afrika de meyste historiske steydes up de [[Wereldafgoodlieste|wearldarvgoodlyste van UNESCO]].<ref>[http://www.deepethiopian.com/2013/05/ethiopia-most-world-heritage-sites-in.html Deepethiopian.com. "Ethiopia: Most World Heritage Sites in Africa".] – Nen ethiopisken blog.</ref> Den ethiopisken ståt is eyne van de uprichters van de VN, lid van de [[G24]], de [[Non-Aligned Movement]], [[G77]] en de [[Organisaty vöär Afrikaanske Eynheid]]. De höyvdstad Addis Abeba is huusbasis vöär de [[Afrikaanske Uny]], de [[Pan-Afrikaanske Kamer van Kouphandel en Industry]], de [[Afrikaanske Ekonomiske Kommissy van de Vereynigde Natys]], et [[Afrikaanske hülpleyger]] en vöäle wearldwyde NGO's med ne fokus up Afrika.
+De etiopiske natuur büdt starke natuurlike teagenstellingen. Et westen is vrüchtbår med wolden en verskeidene rivyren en de heytste neadersetting van de wearld, [[Dallol (Etiopie)|Dallol]] in et noorden. De [[Etiopiske Houglanden]] sint de gröytste bargkeaten van Afrika]]. De [[Sof Omargrotten]] sint et gröytste van et wearlddeyl. Ouk hevt Etiopie van Afrika de meyste historiske steades up de [[Wereldafgoodlieste|wearldarvgoodlyste van UNESCO]].<ref>[http://www.deepethiopian.com/2013/05/ethiopia-most-world-heritage-sites-in.html Deepethiopian.com. "Ethiopia: Most World Heritage Sites in Africa".] – Nen etiopisken blog.</ref> Den etiopisken ståt is eyne van de uprichters van de VN, lid van de [[G24]], de [[Non-Aligned Movement]], [[G77]] en de [[Organisaty vöär Afrikaanske Eynheid]]. De höyvdstad Addis Abeba is huusbasis vöär de [[Afrikaanske Uny]], de [[Pan-Afrikaanske Kamer van Kouphandel en Industry]], de [[Afrikaanske Ekonomiske Kommissy van de Vereynigde Natys]], et [[Afrikaanske hülpleager]] en vöäle wearldwyde NGO's med ne fokus up Afrika.
 
-In de jåren söäventig en tachtig van de 20. eywe kreag Ethiopie nen [[Ethiopisken Börgeroorlog|börgeroorlog]] en kommunistiske terrööranvallen te verduren, wårdöär de [[ekonomie|ekonomy]] klappen kreag. Et land hevt nu de gröätste ekonomy (BBP) an Oustafrika.<ref>[http://nazret.com/blog/index.php/2010/02/06/ethiopia_surpasses_kenya_to_become_east_  Nazret.com. "Ethiopia surpasses Kenya to become East Africa's Biggest Economy". Skreaven up 6 february 2010.] Bekeaken up 2 juni 2010.</ref>
+In de jåren söäventig en tachtig van de 20. eywe kreag Etiopie nen [[Etiopisken Börgeroorlog|börgeroorlog]] en kommunistiske terrööranvallen te verduren, wårdöär de [[ekonomie|ekonomy]] klappen kreag. Et land hevt nu de gröytste ekonomy (BBP) an Oustafrika.<ref>[http://nazret.com/blog/index.php/2010/02/06/ethiopia_surpasses_kenya_to_become_east_  Nazret.com. "Ethiopia surpasses Kenya to become East Africa's Biggest Economy". Skreaven up 6 february 2010.] Bekeaken up 2 juni 2010.</ref>
+
+==Referentys==
+<references/>
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
