Twentsk hevt kört 'grötste', dan in NSS gröätste

--- a/Etiopie.mw
+++ b/Etiopie.mw
@@ -24,9 +24,11 @@ webstea=|
 ofbeelding2=|
 umskrieving2=
 }}
+
+
 '''Etiopie''' (in et [[amhaarsk]]: ኢትዮጵያ, uutspreaken as: ''ityopja''; [[Tigrinya (språke)|tigrinya]]: ኢትዮጵያ; [[oromo (språke)|oromo]]: ''Itoophiyaa'', [[somali (språke)|somali]]: ''Itoobiya''), officieel de '''Federale Demokratiske Republik Etiopie''', is een land in een deyl van noordoustafrika wat bekend steyt as [[de hoorn van Afrika]]. Et grenst an [[Eritrea]] in et noorden, [[Djibuti]] in et noordousten, et selvstürende gebeed [[Somaliland]] en [[Somalie]] in et ousten, [[Kenia]] in et süden, [[Süüdsudan]] in et westen en [[Sudan]] in et noordwesten. Med meyr as 102 miljoon inwoaners is Etiopie et drükstbevolkede inslöäten land van de wearld en et tweyde dichtstbevolkede land van [[Afrika]], up ne uppervlakte van 1.100.000 km2.
 
-De höyvdstad en ouk gröytste stad is [[Addis Abeba]]. Dee stad ligt up een pår kilometer van den [[oustafrikaansken kloave]] den as et land verdeylt in de nubiske en somaliske tektoniske plate.
+De höyvdstad en ouk gröätste stad is [[Addis Abeba]]. Dee stad ligt up een pår kilometer van den [[oustafrikaansken kloave]] den as et land verdeylt in de nubiske en somaliske tektoniske plate.
 
 [[File:Flag of Ethiopia (1975–1987).svg|thumb|De traditionele vlagge van Etiopie]]
 
@@ -34,11 +36,11 @@ Bütte van de öldst bekende moderne [[menske]] sint vünden in Etiopie.<ref>Nat
 
 Etiopie en [[Eritrea]] gebruket beide et olde [[Ge'ez (skrivt)|Ge'ez-skrivt]] wat eyne van de öldste skryvsystemen in de wearld is.<ref>[https://books.google.com/books?id=gK1aAAAAYAAJ Page, Willie F. "Encyclopedia of African history and culture: African kingdoms (500 to 1500)". Facts on File, Vol 2 (2001).] p 230. ISBN 978-0-8160-4472-6.</ref> Den [[etiopisken kalender]] löpt ungevear söäven jår en drey månd achter up den [[gregoriaansken kalender]]. Et wördt tegelyke bruked med de [[boranakalender]]. Ne meyrderheid van de etiopiers is [[christendom|christelik]] (höyvdsakelik [[Etiopiske ortodokse tewahedokarke|etiopisk ortodoks]] en [[P'ent'ay]]). Et historiske köäningryk Aksum was eyne van de eyrste ståten dee et as ståtsgelöyv instelden. Eyndarde van de inwoaners volget de [[islam]] en dan höyvdsakelik de sunniströyming. Et land hevt de öldste muslimgemeynskap in Afrika. Een grout deyl etiopiske [[jeudendom|jöäden]] woanden töt de tachttiger jåren van de 20. eywe in et land.<ref>Weil, Shalva (2008) "Jews in Ethiopia", pp. 467–75 in ''Encyclopaedia of the Jewish Diaspora'', Vol. 2. M.A. Erlich (ed.). Santa Barbara, USA: ABC CLIO.</ref>
 
-In Etiopie wordet ungevear 80 språken eküürd. De veer gröytste sint et [[Oromo (språke)|oromo]], [[Amhaarsk (språke)|amhaarsk]], [[Somalisk (språke)|somalisk]] en [[tigrayaansk]]. De meyste språken sint afro-asiatisk en dan vöärnamelik [[kusjitiske språken|kusjitisk]] of [[semitiske språken|semitisk]]. Wyders küret se vöäral in südeliker streaken [[omotiske språken]]. Oromo hevt de meyste moderspreakers, mär amhaarsk hevt de meyste spreakers in totaal ümdat et de warkspråke is van de federale regering. Et ge'ezskrivt blivt belangryk as karkenskrivt vöär de etiopiske en eritreeske ortodokse karke en de [[Beta Israel]] (de etiopiske jöäden).
+In Etiopie wordet ungevear 80 språken eküürd. De veer gröätste sint et [[Oromo (språke)|oromo]], [[Amhaarsk (språke)|amhaarsk]], [[Somalisk (språke)|somalisk]] en [[tigrayaansk]]. De meyste språken sint afro-asiatisk en dan vöärnamelik [[kusjitiske språken|kusjitisk]] of [[semitiske språken|semitisk]]. Wyders küret se vöäral in südeliker streaken [[omotiske språken]]. Oromo hevt de meyste moderspreakers, mär amhaarsk hevt de meyste spreakers in totaal ümdat et de warkspråke is van de federale regering. Et ge'ezskrivt blivt belangryk as karkenskrivt vöär de etiopiske en eritreeske ortodokse karke en de [[Beta Israel]] (de etiopiske jöäden).
 
-De etiopiske natuur büdt starke natuurlike teagenstellingen. Et westen is vrüchtbår med wolden en verskeidene rivyren en de heytste neadersetting van de wearld, [[Dallol (Etiopie)|Dallol]] in et noorden. De [[Etiopiske Houglanden]] sint de gröytste bargkeaten van Afrika]]. De [[Sof Omargrotten]] sint et gröytste van et wearlddeyl. Ouk hevt Etiopie van Afrika de meyste historiske steades up de [[Wereldafgoodlieste|wearldarvgoodlyste van UNESCO]].<ref>[http://www.deepethiopian.com/2013/05/ethiopia-most-world-heritage-sites-in.html Deepethiopian.com. "Ethiopia: Most World Heritage Sites in Africa".] – Nen etiopisken blog.</ref> Den etiopisken ståt is eyne van de uprichters van de VN, lid van de [[G24]], de [[Non-Aligned Movement]], [[G77]] en de [[Organisaty vöär Afrikaanske Eynheid]]. De höyvdstad Addis Abeba is huusbasis vöär de [[Afrikaanske Uny]], de [[Pan-Afrikaanske Kamer van Kouphandel en Industry]], de [[Afrikaanske Ekonomiske Kommissy van de Vereynigde Natys]], et [[Afrikaanske hülpleager]] en vöäle wearldwyde NGO's med ne fokus up Afrika.
+De etiopiske natuur büdt starke natuurlike teagenstellingen. Et westen is vrüchtbår med wolden en verskeidene rivyren en de heytste neadersetting van de wearld, [[Dallol (Etiopie)|Dallol]] in et noorden. De [[Etiopiske Houglanden]] sint de gröätste bargkeaten van Afrika]]. De [[Sof Omargrotten]] sint et gröätste van et wearlddeyl. Ouk hevt Etiopie van Afrika de meyste historiske steades up de [[Wereldafgoodlieste|wearldarvgoodlyste van UNESCO]].<ref>[http://www.deepethiopian.com/2013/05/ethiopia-most-world-heritage-sites-in.html Deepethiopian.com. "Ethiopia: Most World Heritage Sites in Africa".] – Nen etiopisken blog.</ref> Den etiopisken ståt is eyne van de uprichters van de VN, lid van de [[G24]], de [[Non-Aligned Movement]], [[G77]] en de [[Organisaty vöär Afrikaanske Eynheid]]. De höyvdstad Addis Abeba is huusbasis vöär de [[Afrikaanske Uny]], de [[Pan-Afrikaanske Kamer van Kouphandel en Industry]], de [[Afrikaanske Ekonomiske Kommissy van de Vereynigde Natys]], et [[Afrikaanske hülpleager]] en vöäle wearldwyde NGO's med ne fokus up Afrika.
 
-In de jåren söäventig en tachtig van de 20. eywe kreag Etiopie nen [[Etiopisken Börgeroorlog|börgeroorlog]] en kommunistiske terrööranvallen te verduren, wårdöär de [[ekonomie|ekonomy]] klappen kreag. Et land hevt nu de gröytste ekonomy (BBP) an Oustafrika.<ref>[http://nazret.com/blog/index.php/2010/02/06/ethiopia_surpasses_kenya_to_become_east_  Nazret.com. "Ethiopia surpasses Kenya to become East Africa's Biggest Economy". Skreaven up 6 february 2010.] Bekeaken up 2 juni 2010.</ref>
+In de jåren söäventig en tachtig van de 20. eywe kreag Etiopie nen [[Etiopisken Börgeroorlog|börgeroorlog]] en kommunistiske terrööranvallen te verduren, wårdöär de [[ekonomie|ekonomy]] klappen kreag. Et land hevt nu de gröätste ekonomy (BBP) an Oustafrika.<ref>[http://nazret.com/blog/index.php/2010/02/06/ethiopia_surpasses_kenya_to_become_east_  Nazret.com. "Ethiopia surpasses Kenya to become East Africa's Biggest Economy". Skreaven up 6 february 2010.] Bekeaken up 2 juni 2010.</ref>
 
 ==Referentys==
 <references/>
