*Empty MediaWiki Message*

--- a/Kumries.mw
+++ b/Kumries.mw
@@ -1,7 +1,7 @@
 [[Bestaand:Siaradwyr y Gymraeg ym Mhrif Ardaloedd Cymru.png|thumb|Antal sprekers van t Kumries in persenten, per gebied in [[Kumrië]]]]
-t '''Kumries''' of '''Wels''' (in de taal zelf: ''Cymraeg'', [[Engels]]: ''Welsh'') is n [[Keltiese talen|Keltiese taal]], die veural espreuken wörden in [[Kumrië]] deur n deel van t [[Kumriërs (volk)|Kumriese volk]]. 
+t '''Kumries''' of '''Wels''' (in de taal zelf: ''Cymraeg'', [[Engels]]: ''Welsh'') is n [[Keltiese talen|Keltiese taol]], die veural espreuken wörden in [[Kumrië]] deur n deel van t [[Kumriërs (volk)|Kumriese volk]]. 
 
-t Is bekend deur [[glos]]sen vanaof de [[9e eeuw]]. De taal beheurt tot de [[Keltiese talen]] en is verwaant mit t [[Iers|Iers-Gaols]], t [[Bretons]], t [[Kornies]], t [[Manx]] en t [[Schots-Gaols]]. t Wörden eschreven in de Kumriese variaant van t [[Latains alfabet|Latiense alfabet]]. 
+t Is bekend deur [[glos]]sen vanaof de [[9e eeuw]]. De taol beheurt tot de [[Keltiese talen]] en is verwaant mit t [[Iers|Iers-Gaols]], t [[Bretons]], t [[Kornies]], t [[Manx]] en t [[Schots-Gaols]]. t Wörden eschreven in de Kumriese variaant van t [[Latains alfabet|Latiense alfabet]]. 
 
 Over de hele wereld bin der ongeveer 700.000 meensen die Kumries praoten, veurnamelik in [[Kumrië]] zelf (611.000), [[Engelaand (regio)|Engelaand]] (133.000) en [[Chubut (provinsie)|Chubut]] in [[Argentinië]] (5.000). Der bin oek kleine gemeenschappen in [[Verienigde Staoten van Amerika|Amerika]] en [[Kanada]]. In [[2004]] wördden t deur 21,7 % van de bevolking espreuken, een stieging mit 2 % sinds [[1991]]. Alsmer meer meensen praoten Kumries, allewel t altied tweetalig is - ze praoten oek [[Engels]] of, in Argentinië, [[Spaans]]. t Kumries wörden veural espreuken op t plattelaand van [[Kumrië]], in t noorden en in t westen. Daor is disse taal vake oek gedeeltelik de onderwiestaal op de legere schoelen. t Hoogste antal sprekers vie'j in t gebied [[Gwynedd]], waor 76,1% van de bevolking Kumries as moerstaal hef. Disse taal ma'j niet deur mekaar haolen mit de [[Kumries-Engelse dialekten]], dit bin Engelse dialekten die espreuken wörden in Kumrië en bin dus niet Kelties.
 
