*Empty MediaWiki Message*

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -138,14 +138,14 @@ De dominantsy van Mercedes wyr wyder bevestiged in China wår Hamilton de eyrste
 By de eyrste race nå den sommerstop in Belgie, nam Hamilton de leiding van Rosberg oaver by de start mår ne botsing tüsken öär in de tweyde runde gav hem nen lekken band en hy trök sich låter terüg uut de race. Dårnå wön hy de italiaanske en singaporeeske Groute Prys, beide van de eyrste startpositsy, wårmed hy de leiding nam in et kampioonskap. Dit wyr evolged döär oaverwinningen in den japansken Grand Prix&nbsp;– den wyr underbrökken döär heavigen reagenval&nbsp;– en de Groute Prys van Rüsland en de Vereynigde Ståten wårmed hy vöär et eyrst in syne karriere vyv oaverwinningen up nen ry behåleden. Syne tynde oaverwinning van et seisoon was ok de 32e van syne karriere, de meyste oaverwinningen van alle britske koureurs. Hamilton wyr werldkampioon nådat hy den Grouten Prys van Abu Dhabi wön, hy versloog teammåt Rosberg med 67 pünten, nådat den wågen van Rosberg mechaniske probleymen kreg tydens de race. Hamilton sei in et vråggesprek by et podium "Dit is den besten dag van myn leaven". An et ende van et jår, untving Hamilton den prys vöär de sportpersoonlikheyd van et jår van de BBC.
 
 ==== Et seisoon van 2015: Darde werldtitel ====
-[[Bestaand:Lewis_Hamilton_2015_Malaysia_FP3_1.jpg|duum|Hamilton at the 2015 Malaysian Grand Prix]]
-Hamilton enjoyed a continuation of Mercedes' dominance heading into the 2015 season, as the new W06 Hybrid completed more laps in pre-season testing than any rival car, and did so using just one power unit.<ref>{{cite news|url=http://www1.skysports.com/f1/news/12472/9739841/toto-wolff-reveals-that-mercedes-used-just-one-engine-during-pre-season-testing|title=Toto Wolff reveals that Mercedes used just one engine during pre-season testing|work=[[Sky Sports]]|publisher=[[Sky (United Kingdom)|BSkyB]]|date=2 March 2015|accessdate=20 March 2015}}</ref> At the opening race in Australia, Hamilton qualified in pole position, 0.594 seconds quicker than teammate Rosberg and 1.391 seconds clear of Felipe Massa's Williams in third.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/31885105|title=Lewis Hamilton on pole in Australia ahead of Nico Rosberg|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=14 March 2015|accessdate=20 March 2015}}</ref> Hamilton then won the race ahead of Rosberg in second, with Sebastian Vettel's Ferrari in third, 34 seconds back.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/31893665|title=Lewis Hamilton wins with ease in Australia as only 11 cars finish|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=15 March 2015|accessdate=20 March 2015}}</ref> In Monaco he lost first position to his teammate Rosberg after leading the race for 65 laps due to a pit-stop error made by his team, eventually finishing third.
-[[Bestaand:Hamilton_Canada_2015.jpg|links|duum|Hamilton celebrating victory at the 2015 Canadian Grand Prix]]
-Ahead of the Monaco Grand Prix, Mercedes announced they had extended the contract with Hamilton for three additional years, keeping him at the squad until the end of the 2018 season. This followed months of widely publicised contract talks between the driver, who chose to negotiate on his own behalf, and the team. The deal is reportedly worth more than £100 million over the full three years, making Hamilton one of the best paid drivers in Formula One.<ref>{{cite web|last1=Weaver|first1=Paul|title=Lewis Hamilton agrees £100m deal to stay at Mercedes for three years|url=https://www.theguardian.com/sport/2015/may/20/lewis-hamilton-mercedes-deal-formula-one-monaco|work=The Guardian|accessdate=21 May 2015|date=20 May 2015}}</ref> It was also reported that the extension contract granted Hamilton the right to maintain his own image rights, which is considered unusual in the sport, and keep his championship winning cars as well as the trophies he collects.<ref>{{cite web|last1=Johnson|first1=Daniel|title=Lewis Hamilton signs £100m deal with Mercedes|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/lewishamilton/11617842/Lewis-Hamilton-signs-100m-deal-with-Mercedes.html|work=The Telegraph|accessdate=21 May 2015|date=20 May 2015}}</ref>
+[[Bestaand:Lewis_Hamilton_2015_Malaysia_FP3_1.jpg|duum|Hamilton in den Grouten Prys van Maleysie van 2015]]
+Hamilton kon profiteren van nen vervölg van de dominantsy van Mercedes an et begin van et seisoon van 2015, as den nyen W06 Hybrid meyr ründjens voltoieden as elken anderen wågen en deed dat med mår eynen krachtbrun. By de oapeningsrace in Australie kwalificereden Hamilton sich vöär de eyrste startpositsy, 0,594 sekunden rapper as teammåt Rosberg en 1,391 sekunden vöär den Williams van Felipe Massa's Williams den as darden starteden. Hamilton wön vervölgens de race vöär Rosberg up de tweyde plåtse, med den Ferrari van Sebastian Vettel as darden up 34 sekunden achterstand. In Monako verlöär hy syne eyrste positsy an synen teammåt Rosberg nå 65 runden lang an de leiding van de race too hebben ereden döär nen fout den by den pitstop döär syn team was emåked, wårnå hy uutendelik dardes endigeden.
+[[Bestaand:Hamilton_Canada_2015.jpg|links|duum|Hamilton vyret syne oaverwinning in den Grouten Prys van Kanada van 2015]]
+Vöärafgånd an den Grouten Prys van Monako, kondigeden Mercedes an dat sy et konkrakt van Hamilton med drey jår hadden verlänged, wårmed hy töt et ende van et seisoon van 2018 by et team wyr ehölden. Hyrup volgeden månden van kontraktbesprekkingen den wyd epublisered wyren tüsken den koureur, den koos vöär sichself too underhandelen en et team. Den deal skynt meyr as £100 miljoon weerd too wean oaver de vülle drey jåren, wat Hamilton eyn van den bestbetålden koureurs in de Formule Eyn måket. Et wyr ok vermelded dat et verlängde kontrakt Hamilton et recht gav um syn eigen beyldrechten by too holden, wat as ungewöän wördet beskowed in den sport en um syne wågen wårmed hy kampioonskappen had ewönnen net as de troffeen dy hy versåmelet.
 
-After a win-less start to the European round, Hamilton went on to win the British Grand Prix for the second time in a row and third overall, also surpassing Jackie Stewart's 45-year-old record of laps led in eighteen consecutive Grands Prix.<ref>{{cite web|last1=Barretto|first1=Lawrence|title=British GP: Lewis Hamilton, tremulous during the final lap dedicates his home win to the fans|url=http://www.autosport.com/news/report.php/id/119855|website=autosport.com|accessdate=5 July 2015|date=5 July 2015}}</ref> He finished sixth in an eventful Hungarian Grand Prix, ending his run of 16 consecutive podium finishes, the second-longest in F1 history.<ref>{{cite web|last1=Benson|first1=Andrew|title=Lewis Hamilton admits to 'bad performance' at Hungarian GP|url=https://www.bbc.com/sport/0/formula1/33669813|publisher=BBC Sport|accessdate=21 May 2018|date=27 July 2015}}</ref> Hamilton won the next two races at Spa and Monza and extended his championship lead over Nico Rosberg, who was forced to retire in the latter race due to engine failure, to 53 points. At the Singapore Grand Prix, Hamilton was only able qualify in 5th ahead of teammate Nico Rosberg,<ref>{{cite web|last1=Benson|first1=Andrew|title=Sebastian Vettel on pole with Lewis Hamilton fifth in Singapore|url=https://www.bbc.com/sport/0/formula1/34303149|publisher=BBC|accessdate=20 September 2015|date=19 September 2015}}</ref> and had moved up to 4th in the race before he was forced to retire due to a power unit issue.<ref>{{cite web|last1=Benson|first1=Andrew|title=Sebastian Vettel wins as Lewis Hamilton retires in Singapore|url=https://www.bbc.com/sport/0/formula1/34308250|publisher=BBC|accessdate=20 September 2015|date=20 September 2015}}</ref> By winning the United States Grand Prix, Hamilton secured his third Drivers' Championship with three races left to run.<ref>{{cite web|last1=Weaver|first1=Paul|title=Lewis Hamilton wins F1 world title for third time at US Grand Prix|url=https://www.theguardian.com/sport/2015/oct/25/lewis-hamilton-wins-f1-world-title-third-time-us-grand-prix|work=The Guardian|accessdate=25 October 2015|date=25 October 2015}}</ref>
+Nå nen winlosen start an den europeesken tuur, wön Hamilton den britsken Grand Prix vöär de tweyde mål up nen ry en de darde mål in totål, wårmed hy ok et 45 jår olde rekord van Jackie Stewart van et antal rundes an de leiding ereden ehad hebben in achttyn upeynvölgende Groute Prys verbrak. Hy endigeden sesdes in nen hongaarsken Grand Prix wårin vöäl was eskeden, wat ok syne upeynvölging van 16 finishes up et podium up nen ry beendigeden, de up eyn nå langste in de geskydenis van de F1. Hamilton wön de völgende twey races in Spa en Monza en breidden syne leidende positsy oaver Nico Rosberg, den in de låtste race mos upgeaven vanweagen falen van den motor, uut når 53 pünten. By den singaporeesken Grand Prix, kön Hamilton sich as vyvden kwalificeren vöär teammåt Nico Rosberg en hy was uperükked når de veerde plåtse in de race vöärdat hy mos upgeaven vanweagen nen probleym med den krachtbrun. Med et winnen van den Grouten Prys van de Vereynigde Ståten versekereden Hamilton sich drey races vöär et ende van syn darden individuelen kampioonskap.
 
-==== 2016 season: Runner-up to Rosberg ====
+==== Et seisoon van 2016: Tweyds achter Rosberg ====
 At the season opening Australian Grand Prix, Hamilton qualified on pole. He made a poor start to the race, however, but recovered to finish second behind his Mercedes teammate Nico Rosberg.<ref>{{cite web|url=https://www.bbc.co.uk/sport/formula1/35850356|title=Lewis Hamilton on pole position in Australia after new F1 qualifying|work=BBC Sport|accessdate=26 March 2016}}</ref> In the second race of the season, the Bahrain Grand Prix, Hamilton again qualified on pole. On the first lap however there was a collision between him and Bottas, for which Bottas was handed a drive-through penalty.  Hamilton recovered to finish the race in third behind Rosberg and Räikkönen. In the next race, the Chinese Grand Prix, Hamilton did not set a time in qualifying and started at the back of the grid. He got as high up fifth but was overtaken by Räikkönen and Ricciardo near the end of the race to finish seventh. In the fourth race of the season, the Russian Grand Prix, Hamilton did not set a time in the third part of qualifying, meaning he started from tenth position on the grid. He finished second behind Rosberg, despite having zero water pressure for the last 16 laps.<ref>{{cite web|title=Mercedes write open letter to fans to silence conspiracy theories|url=http://www.skysports.com/f1/news/12472/10268836/mercedes-write-open-letter-to-fans-to-ward-off-conspiracy-theories|publisher=Sky Sports|accessdate=23 May 2016}}</ref>
 
 In the next race in Spain, Hamilton claimed pole position, ahead of Rosberg. Both drivers made a good start, but Rosberg passed Hamilton around the outside of Turn 1. In the next few corners, Rosberg's car entered an incorrect engine mode due to an error the German had made on the formation lap. That meant he was slower than Hamilton coming out of Turn 3, and Hamilton went to overtake for the lead. Rosberg closed the door and forced Hamilton on to the grass where he lost control, eventually spinning into Rosberg and taking both drivers out of the race. The stewards deemed it a racing incident and decided Hamilton had been justified in his attempt as he was 17 kilometres per hour (11{{convert|17|km/h}} quicker than Rosberg coming out of Turn 3.<ref name="auto">{{Cite web|url=http://www.espn.co.uk/f1/story/_/id/16758147/a-line-lewis-hamilton-nico-rosberg-rivalry|title=Lewis Hamilton-Nico Rosberg rivalry: A timeline|date=5 July 2016|work=ESPN|access-date=10 August 2017|language=en-GB}}</ref> On the opening lap a collision between Hamilton and Rosberg meant that both Mercedes cars retired instantly. The stewards decided that the collision was a racing incident.<ref>{{cite web|last1=Gill|first1=Pete|last2=Galloway|first2=James|title=Lewis Hamilton and Nico Rosberg escape penalty after their race-ending Spanish GP crash|url=http://www.skysports.com/f1/news/12433/10282859/watch-lewis-hamilton-and-nico-rosberg-crash-out-of-spanish-gp|publisher=Sky Sports|accessdate=21 May 2018|archiveurl=https://web.archive.org/web/20160515202229/http://www.skysports.com/f1/news/12433/10282859/watch-lewis-hamilton-and-nico-rosberg-crash-out-of-spanish-gp|archivedate=15 May 2016|date=19 May 2016}}</ref>
