*Empty MediaWiki Message*

--- a/Boris_Johnson.mw
+++ b/Boris_Johnson.mw
@@ -17,3 +17,9 @@ Nå syn ministerskap güng Johnson vannys an et wark by de ''Daily Telegraph'', 
 Johnson was trouwd en hevt vyv kinder. In september 2018 kundigden hee en syne domålige vrouwe an uut mekander te gån<ref>[https://www.bbc.co.uk/news/uk-politics-45446254 "Boris Johnson and wife to divorce"], BBC News. 7 september 2018</ref>
 
 Vanweage syne geboorte in [[Niej-York|Ny Jork]] har Johnson nöäst de britske ouk de [[Vereynigde Ståten|amerikaanske]] nationaliteit. In [[2016]] deade he dår afstand van.<ref>[https://www.theguardian.com/politics/2017/feb/08/boris-johnson-renounces-us-citizenship-record-2016-uk-foreign-secretary Boris Johnson among record number to renounce American citizenship in 2016], 9 februari 2017.</ref>
+
+[[Kategorie: Tweants artikel]]
+[[Kategorie: Verienigd Keuninkriek]]
+
+[[nl:Boris_Johnson]]
+[[en:Boris_Johnson]]
