*Empty MediaWiki Message*

--- a/Fluitenbarg.mw
+++ b/Fluitenbarg.mw
@@ -1,1 +1,3 @@
 '''Flütenbarg''' ([[Nederlaands|Nederlaandsk]]: ''Fluitenberg'') is en dörp in de [[Nederlaand|nederlaandske]] gemeynte [['t Ogeveine|et Hogeveyne]] in de provincy [[Drenthe|Drente]]. Et hev ümdeby 470 inwoners.
+
+<nowiki>[[Kategorie:Ploats in Drenthe]]</nowiki> [[:Kategorie:Drèents artikel|Kategorie:Drèents artikel]]
