--- a/Fluitenbarg.mw
+++ b/Fluitenbarg.mw
@@ -1,4 +1,4 @@
 '''Flütenbarg''' ([[Nederlaands|Nederlaandsk]]: ''Fluitenberg'') is en dörp in de [[Nederlaand|nederlaandske]] gemeynte [['t Ogeveine|et Hogeveyne]] in de provincy [[Drenthe|Drente]]. Et hev ümdeby 470 inwoners.
 
 {{Dialekt|drt|Hogevene|NSS}}
-[[Kategorie:Ploats in Drenthe]] [[Kategorie:Drèents artikel]]
+[[Kategorie:Plaots in Drenthe]] [[Kategorie:Drèents artikel]]
